# roster-sdk

./: .gitignore  Dockerfile.langchain.example
examples/docker/: Dockerfile.experimental.example  Dockerfile.langchain.example
examples/docker/experimental/: pyproject.toml  script.py
examples/docker/experimental/src/: agent.py
examples/docker/langchain/: pyproject.toml
examples/docker/langchain/src/: agent.py
python/: pyproject.toml
python/roster_sdk/: __init__.py  cli.py  config.py  constants.py  entrypoint.py  interface.py
python/roster_sdk/adapters/: __init__.py  langchain.py  prompts.py
python/roster_sdk/agent/: __init__.py  cli.py  context.py  entrypoint.py  errors.py  interface.py  logs.py
python/roster_sdk/client/: base.py  errors.py
python/roster_sdk/client/agent/: __init__.py  base.py
python/roster_sdk/client/agent/collaboration/: __init__.py  interface.py
python/roster_sdk/client/agent/task/: __init__.py  interface.py  manager.py
python/roster_sdk/models/: agent.py  base.py  chat.py  role.py  task.py
python/roster_sdk/models/api/: activity.py  chat.py  task.py
python/roster_sdk/models/client/: agent.py  role.py  team.py
python/roster_sdk/models/resources/: agent.py  role.py  task.py  team.py  team_layout.py
python/tests/: test_langchain.py
