[tool.poetry]
name = "roster-sdk"
version = "0.1.0"
description = "Python SDK for building Roster Agents"
authors = ["Evan Doyle <evanmdoyle@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
roster-agent = "roster_sdk.cli:main"

[tool.poetry.dependencies]
python = "^3.8.1"
langchain = "^0.0.167"
websockets = "^11.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
openai = "^0.27.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
